- View   * added new translation
- Locales
  * added new translation

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -228,6 +228,7 @@ en:
     list_workstations : "List all workstations"
     new : "New"
     stats_workstations : "Stats"
+    change_place: 'Change place'
 
     #Places
     places : "Places"
