- README   * added link to recommend me in working with rails website

--- a/README
+++ b/README
@@ -131,3 +131,6 @@ on Rails application.
 
 
 
+<a href="http://workingwithrails.com/recommendation/new/person/9307-cesar-diaz">
+   <img alt="Recommend Me" src="http://workingwithrails.com/images/tools/compact-small.jpg" />
+</a>
