- Vendor   * added new plugin OpenFlashChart  Version 2.0.0
- Controllers
  * adapted controllers of places and computers to show the chart
    generated by flash plugin

- Views
  * addapted to the new chart flash plugin shows

- Locales
  * fixed stats paragraph

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -184,8 +184,8 @@ en:
     label: "Search"
 
   stats:
-    available: "Disponibles"
-    unavailable: "No disponibles"
+    available: "Available"
+    unavailable: "Unavailable"
     alone: "Alone"
     workstation: "In station"
 
