--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -183,6 +183,8 @@ es:
     unavailable: "En uso"
     alone: "Libre"
     workstation: "En equipos"
+    places_statistic : "Aqui puede ver la distribucion en tipos de lugares"
+    pc_statistic : "Aqui puede ver la distribucion de computadoras por lugares"
 
   phrases:
     list_of : "Lista de "
