--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -185,6 +185,8 @@ es:
     workstation: "En equipos"
     places_statistic : "Aqui puede ver la distribucion en tipos de lugares"
     pc_statistic : "Aqui puede ver la distribucion de computadoras por lugares"
+    screens_statistic : "Aqui puede ver la distribucion de monitores por lugares"
+    printers_statistic : "Aqui puede ver la distribucion de impresoras por lugares"
 
   phrases:
     list_of : "Lista de "
