- Controller   * changing advices to show in flash notices
- View
  * added flash notice in index computers and new
    sessions

- Locales
  * added new translations

- Migration
  * little changes

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -2,6 +2,11 @@
 # See http://github.com/svenfuchs/rails_i18n/tree/master/rails%2Flocale for starting points.
 
 en:
+  login:
+    succesfully: "Succesfully loged in"
+    error: "Retype your user or password and try again"
+    out: "You have been logged out."
+
   bill:
     code: 'Code'
     company: 'Company'
@@ -297,6 +302,3 @@ en:
     login : "Login"
     logout : "Logout"
 
-    #Flash
-    flash:
-      login : "Logged in succesfully."
