- Controller   * added flash notice to index method
- Partial
  * little changes

- Locales
  * added new translation

--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -3,6 +3,7 @@ es:
     succesfully: "Se a logueado"
     error: "Reintente nuevamente tipeando su usuario y clave"
     out: "Saliste de la aplicacion"
+    in: "Escriba su usuario y clave para ingresar a la aplicacion"
 
   bill:
     code: 'Codigo'
