--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -6,6 +6,7 @@ en:
     succesfully: "Succesfully loged in"
     error: "Retype your user or password and try again"
     out: "You have been logged out."
+    in: "You must write your user and password to go inside the application"
 
   bill:
     code: 'Code'
