- Controllers   * added before_filter :countries for companies controller
- Model
  * added new validations over  :street, :number, :city, :country
    and delete validation for :fax

- Partial
  * some changes to show

- Locales
  * added new translation

- Library
  * little change putting Argentina country first in the list

--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -17,6 +17,10 @@ es:
 
   company:
     name: "Nombre"
+    street: "Calle"
+    number: "Numero"
+    city: "Ciudad"
+    country: "Pais"
     address: "Direccion"
     phone: "Telefono"
     fax: "Fax"
