- Partial   * adding new help
- Locales
  * new translation

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -50,6 +50,42 @@ en:
                       place(Availables plus Unavailables), other list with only the availables,
                       other with only the inavailables and other options to see statistics."
 
+     what_in_submodule_motherboards: 'What has in motherboards?'
+     in_motherboards_has: 'Here it is possible to observe a list with all the motherboards for
+                           each computer if it is used by a computer o without a PC name in
+                          case that it still alone'
+
+     what_in_submodule_harddisks: 'What has in harddisks?'
+     in_harddisks_has: 'Here it is possible to observe a list with all the harddisks for
+                           each computer if it is used by a computer o without a PC name in
+                          case that it still alone'
+
+     what_in_submodule_memories: 'What has in memories?'
+     in_memories_has: 'Here it is possible to observe a list with all the memories for
+                           each computer if it is used by a computer o without a PC name in
+                          case that it still alone'
+
+     what_in_submodule_cds: 'What has in cds?'
+     in_cds_has: 'Here it is possible to observe a list with all the cds devices for
+                           each computer if it is used by a computer o without a PC name in
+                          case that it still alone'
+
+     what_in_submodule_dvds: 'What has in dvds?'
+     in_dvds_has: 'Here it is possible to observe a list with all the dvds devices for
+                           each computer if it is used by a computer o without a PC name in
+                          case that it still alone'
+
+     what_in_submodule_screens: 'What has in screens?'
+     in_screens_has: 'Here it is possible to observe a list with all the screens devices for
+                           each computer if it is used by a computer o without a PC name in
+                          case that it still alone'
+
+     what_in_submodule_printers: 'What has in printers?'
+     in_printers_has: 'Here it is possible to observe a list with all the printers devices for
+                           each computer if it is used by a computer o without a PC name in
+                          case that it still alone'
+
+
   login:
     succesfully: "Succesfully loged in"
     error: "Retype your user or password and try again"
