- Controllers   * added new option for list method
- Model
  * added new named scope for places

- Partials
  * added new option for list selector of kinds of places

- Locales
  * added new translation

- Spec
  * fixed spec of views

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -194,6 +194,7 @@ en:
     departments: "Departments"
     offices: "Offices"
     rooms: "Rooms"
+    classrooms: "Classrooms"
     stores: "Stores"
     action: "Action"
     confirm: "Are you sure?"
