- Partial   * adapting the partials to show the new field 'contact'
- View
 * adapting the views to show the new field 'contact'

- Locales
  * adding new translations

- Migrations
  * adding new migration to add contact field in companies
    table

- Schema
  * modified by changes of new field

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -123,6 +123,7 @@ en:
     city: "City"
     country: "Country"
     address: "Address"
+    contact: "Contact"
     phone: "Phone"
     fax: "Fax"
     email: "Email"
