--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -21,6 +21,7 @@ es:
     number: "Numero"
     city: "Ciudad"
     country: "Pais"
+    contact: "Contacto"
     address: "Direccion"
     phone: "Telefono"
     fax: "Fax"
