--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -184,7 +184,8 @@ fr:
     in_workstation: "Ce dispositif est assigné dans un poste de travail.
     Pour changer l'attribut Lieu il doit aller à la section Équipements."
     stats_in_place: "Il libère : équipements qui ne font pas partie d'un poste de travail. Dans des équipes : ils intègrent un poste de travail"
-
+    msg_text: "You must put a hyphen sign where is need put a text if you don't have this data"
+    msg_number: "You must put a cero(0) number where is need put a number if you don\'t have this data"
 
   search:
     label: "Chercher"
