- README   * little changes

--- a/README
+++ b/README
@@ -4,6 +4,7 @@ Copyright (C) 2008 Cesar Diaz
 
 cesare.diaz [at] gmail [dot] com
 
+Website for this project : http://inventory.cesardiaz.com.ar/
 Personal website : http://cesardiaz.com.ar/
 My blog: http://cesarediaz.blogspot.com
 
