--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -215,6 +215,11 @@ es:
 
 
   menu:
+    #Models
+    models: "Modelos"
+    list_models: "Listar modelos"
+    new_model: "Nuevo modelo"
+
     pages: "Paginas"
     list_pages: "Listar paginas"
     new_page: "Nueva pagina"
