--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -100,6 +100,13 @@ en:
      in_pages_has: "There you can add new pages for the frontend application site"
 
 
+  models:
+    model: 'Model'
+    mark: 'Mark'
+    new: 'New model'
+    description: 'Description'
+    mark: 'Mark'
+
   login:
     succesfully: "Succesfully loged in"
     error: "Retype your user or password and try again"
